<resources>
    <string name="app_name">MusicBot</string>

    <string name="frequency_text">%.2f Hz</string>
    <string name="title_activity_music_bot">MusicBot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MusicBot</string>
    <string name="nav_header_subtitle">budacjozef98@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_record_and_recognize">Record &amp; Recognize</string>
    <string name="menu_history">History</string>
    <string name="menu_music">MusicBot</string>
    <string name="menu_library">Library</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_equalizer">Equalizer</string>
    <string name="menu_settings">Settings</string>


</resources>
