<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music_note"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_recognize"
            android:icon="@drawable/ic_record_voice"
            android:title="@string/menu_record_and_recognize" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music"
            android:title="@string/menu_library"
            />
        <item
            android:id="@+id/nav_equalizer"
            android:icon="@drawable/ic_equalizer"
            android:title="@string/menu_equalizer"
            />
    </group>

    <item android:title="About">
        <menu>
            <item
                android:id="@+id/nav_app"
                android:icon="@drawable/ic_about"
                android:title="About" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings"
                />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:iconTint="@android:color/white"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
